--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,9 @@
 <mat-grid-list cols="8" rowHeight="91vh" >
 
   <mat-grid-tile colspan="5" class="graph">
-    <app-graph></app-graph>
+    <mat-card class="container-card">
+      <app-graph></app-graph>
+    </mat-card>
   </mat-grid-tile>
 
   <mat-grid-tile colspan="3" class="add">
